--- a/project-1/style.css
+++ b/project-1/style.css
@@ -243,7 +243,7 @@ margin-left: 10%;
    
 }
 .skills{   background-image: linear-gradient(to left, rgb(53, 221, 255), #8758ff);
-  
+  height: 1055px;
     width: 100%;
    
 }
@@ -302,10 +302,10 @@ top: 2858px;
 .lng{
    background-color: rgb(165, 205, 241);
     height:100px;
-    width: 920px;
+    width: 1020px;
     border: groove 1em rgb(110, 0, 125);
   border-radius: 2em;
-margin:5% 30%;
+margin:5% 50%;
     display: flex; 
     justify-content: space-around;
     padding: 17px;
@@ -316,7 +316,7 @@ margin:5% 30%;
     margin: 5% 35%;
 }
 .lng-1{
-    height: 25vh;
+
 }
 footer{
     position: relative;
@@ -333,7 +333,7 @@ background-color: rgba(255, 255, 255, 0.573);
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    text-align: center;
+margin-right: -40px;
 }
 .footer-cont h3{
     font-size: 2rem;
@@ -373,7 +373,7 @@ font-size: 50px;
 }
 .footr-bottom{
     background-color: #000000;
-    width: 100%;
+ 
     padding: 20px 0;
     text-align: center;
 }
@@ -416,7 +416,7 @@ font-size: 50px;
 /*  */
 .ahmad{
     width: 100%;
-    height: 50vh;
+    height: 80vh;
 }
 .responsiveref {
     margin:40px 0 12% 8% ;
@@ -432,40 +432,55 @@ font-size: 50px;
     margin-left: 26px;
     width: 20%;
     background-color: #ffffff17;
+    height: 400px;
   }
 
   div.reference:hover {
     border: 1px solid rgb(255, 250, 250);
   }
   div.reference img {
-    width: 250px;
+    width:250px;
     height: 35vh;
   }
   div .reference .desc{
     font-family:'Alata',;
-    font-size: 18px;
-    margin: 8px;
+    font-size: 28px !important;
+    margin: 12px;
+    color: white;
   }
   div .reference .desc p{
-    font-size: 10px;}
+    font-size: 16px;
+margin: 10px;}
     .home-text{
         display: block; font-size: 32px; margin-bottom: 15px; font-weight: bold;
     }
     @media only screen and (min-device-width:0px) and  (max-device-width:481px){
-        .home-text{
-            margin-bottom: 50px;
-            margin-top: 100px;
+
+        .home{
+        height: 1500px;
+       }
+      .cont{
+        margin-top: 180px;
+      }
+        #home-text{
+            margin-bottom: 0px !important;
+            margin-top: 50px;
+        }
+        .cont-text{
+         font-size: 25px;
+            margin-top: 400px;
         }
         body{
             padding-top: 10px; 
             height:100%;
+            width: 100;
         }
         h1{
-            font-size: 60px;
+            font-size: 90px;
         }
         
         h1{
-            font-size:40px;
+            font-size:90px;
             background-image: linear-gradient(to left, rgb(12, 215, 255), #8758ff);
             -webkit-background-clip: text; 
             background-clip: text;
@@ -496,40 +511,47 @@ font-size: 50px;
         }    
         nav{
             padding-right: var(--padding);
-            padding-top: 1rem;
+            padding-top: 5rem;
             display: grid;
             justify-content: flex-start;
             width: 100%;
             position: fixed;
             z-index: 1;
-            font-size: 20px;
+            font-size: 32px;
             font-weight: 600;
+            margin-left: 39px;
         }
 .home h3{
-    font-size: 15px;
+    font-size: 19px;
+}
+.home p{
+    display: none;
 }
 p{
     color: var(--color);
     letter-spacing: 1px;
-    line-height: 3.2rem;
+    line-height: 6.0rem;
     display: flex;
-    word-wrap: break-word;
+width: 800px;
     word-spacing: 2px;
-    font-size: 20px;
+    font-size: 42px;
 }
 
 .me{
-    margin-right: 120px;
+  
        position: relative;
 
     }
     .imge{
-    width: 80%;
-    margin-right: 140px;
+  
+
+   
     }
     .home .me img{
-        width: 95%;
-    }
+        width: 594px;
+     margin-left:-70px ;
+    
+       margin-top: -600px;}
     .about{
         background-image: linear-gradient(180deg, #a9c9ff 0%, #6e2681 100%);
         padding: 2rem var(--padding);
@@ -537,14 +559,15 @@ p{
         flex-wrap: wrap;
         align-items: center;
         justify-content: space-around;
-        height: 112vh;
-        width: 820px;
+        height: 170vh;
+        width: 1100px;
         border-radius: 10px 100px / 120px;
         align-content: center;
     }
-    .logo img{
+    #logo img {
         margin-left: 0 50px;
         padding-left: 50px;
+        display: none !important;    
     }
     .about .about-img{
         width: 40%;
@@ -556,7 +579,7 @@ p{
     }
     .about .about-text {
       
-        padding-right: 100px;
+   
         font-size: 32px;
     
     
@@ -567,7 +590,7 @@ p{
          display: flex;
          align-items: center;
          justify-content: space-around;
-         height: 85vh;
+         height: 120vh;
          align-content: center;
          
        }
@@ -595,6 +618,9 @@ p{
         
         
      }
+     .h5{
+        display: none;
+     }
     .button{
         background-image: linear-gradient(to left, rgb(33, 141, 162), #8758ff);
         -webkit-background-clip: text;
@@ -605,7 +631,7 @@ p{
         font-weight: bold;
         border-radius: 10px 100px / 120px;
         border: #5CB8E4 solid 2px;
-        padding: 5px;
+        padding: 25px;
         margin: 7% 5%; 
      position: absolute;
         
@@ -653,13 +679,21 @@ margin:5% 30%;
     justify-content: space-around;
     padding: 17px;
 }
-.skills{   background-image: linear-gradient(to left, rgb(53, 221, 255), #8758ff);
+.skills{   background-image: linear-gradient(to left, rgb(109, 0, 119), #8758ff);
   
-    width: 800px;
+    width: 1100px;
+    height: 1650px;
    
 }
+.skills, ul{
+    font-size:33px;
+}
+
+
+
 .skill .title h2{
     justify-content: space-around;
+    
     }
     .box{
         display: flex;
@@ -670,7 +704,7 @@ margin:5% 30%;
      
     }
     .card{
-        height: 74vh;
+        height: 100vh;
         width: 600px;
         padding: 20px 35px;
         background-image: linear-gradient(180deg, #00bef3 50% ,#ac38ae 100%);
@@ -690,114 +724,212 @@ margin:5% 30%;
     .lng{
         background-color: rgb(165, 205, 241);
          height:100px;
-         width: 300px;
+         width: 400px;
          border: groove 1em rgb(110, 0, 125);
        border-radius: 2em;
      margin:5% 50%;
          display: flex; 
-         justify-content: space-around;
+         justify-content: space-evenly;
          padding: 17px;
      }
      .lng-h2{
-         display: flex;
-         justify-content: center;
          margin: 5% 50%;
          padding-bottom: 10px;
      }
      .lng-1{
          height: 25vh;
          margin-right: 300px;
+display: none;
      }
      .ahmad{
-        width: 80%;
-        height: 50vh;
+  width: 940px;
+  height: 3800px;
+ 
+    }
+    #ref-name{
+        font-size: 60px !important;
+        color: #00bef3 !;
     }
     .responsiveref {
-        margin:40px 0 12% 8% ;
-        padding: 0 20px;
-        float:left;
-        width: 90%;
-        display: flex;
-        font-family:'Alata', sans-serif;
+   display: grid;
+   grid-template-columns: 280px;
+   justify-content: center;
+   margin: 0px -50px;
+   margin-right: 800px;
+
+
       }
       div.reference {
     
-        margin-right:32px;
-        margin-left: 26px;
+    background-color: #fbfbfb53;
+    width:680px ;  
+    height:800px;
+    margin: 50px 0px;
 
-        background-color: #ffffff17;
+       
       }
     
-      div.reference:hover {
-        border: 1px solid rgb(255, 250, 250);
-      }
       div.reference img {
-        width: 90px;
-        height: 25vh;
+      width: 679px;
+      height: 500px;
       }
       div .reference .desc{
         font-family:'Alata',;
-        font-size: 18px;
-        margin: 8px;
+        font-size: 40px;
+        margin: 70px 30px;
       }
       div .reference .desc p{
-        font-size: 10px;}
-}
+        font-size: 30px;
+        margin: 20px;
+        margin-right: 30px;
+        width: 400px;
     
+    }
+
+    footer{
+        position: relative;
+        bottom: 0;
+        left: 0;
+        right: ;
+    background-color: rgba(255, 255, 255, 0.573);
+        font-family: system-ui ;
+        padding-top: 40px;
+        color: #8758ff;
+        width: 1100px;
+    }
+    .footer-cont{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+    }
+    .footer-cont h3{
+        font-size: 5rem;
+        font-weight: 700;
+        text-transform: capitalize;
+        line-height: 3rem;
+        color: #000000;
+    }
+    .footer-cont p{
+    max-width: 500px;
+    margin:40px 20px;
+    line-height: 24px;
+    font-size: 30px;
+    color: #000000;
+    }
+    .social{
+        list-style: none;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 1rem 1rem 3rem 1rem;
+    
+    
+    }
+    .social a{
+        text-decoration: none;
+        color: #000000;
+        transition: color .4s ease;
+    margin: 10px;
+    font-size: 80px;
+    }
+    .social a i{
+        font-size: 7rem;
+    }
+    .social a:hover i{
+        color: #6e2681;
+    }
+    .footr-bottom{
+        background-color: #000000;
+     
+        padding: 20px 0;
+        text-align: center;
+    }
+    .footr-bottom p{
+        font-size: 22px;
+        word-spacing: 2px;
+        text-transform: capitalize;
+        display: flex;
+        justify-content: center;
+        margin-left: 160px;
+    }
+    .footr-bottom span{
+        text-transform: uppercase;
+        opacity: .4;
+        font-weight: 200;
+    }
+    #ref-name{
+        margin-left: 40px !important;
+    }
+      }
     @media only screen and (min-device-width:481px) and  (max-device-width:768px){
         h1{
-            font-size: 30px;
+            font-size: 40px;
         }
+   
         nav{
             padding-right: var(--padding);
-            padding-top: 1rem;
+            padding-top: 2.4rem;
             display: grid;
-            justify-content: flex-start;
-            width: 100%;
+            grid-template-columns: auto auto 100px;
+            width: 950px;
             position: fixed;
             z-index: 1;
-            font-size: 9px;
+            font-size: 18px;
             font-weight: 600;
             left: 1;
+          margin-right: 20px;
         }
         .home{
-            margin: 100px;
-            margin-top: 200px;
+         width: 100px;
+         height: 700px !important;
         }
 .home h3{
     font-size: 5px;
 }
+.lol{
+    width: 255px;
+    font-size: 19px;
+    height: 100px;
+    line-height: 20px;
+}
 p{
     color: var(--color);
-    letter-spacing: 1px;
-    line-height: 1.2rem;
-    font-size: 10px;
+    letter-spacing: 2px;
+    font-size: 20px;
     display: inline-block;
     font-weight: 500;
-    word-wrap: break-word;
+ line-height: 30px !important;
     word-spacing: 2px;
+    
 }
 
 .me{
-    margin-right: 120px;
+ padding: 0;
+ margin: 0;
        position: relative;
+       width: 100px;
 
     }
     .imge{
     width: 70%;
-    margin-right: 140px;
+
     }
     .home .me img{
-        width: 75%;
+        height: 500px;
+        width: 300px;
+       
     }
+    
     .about{
         background-image: linear-gradient(180deg, #a9c9ff 0%, #6e2681 100%);
         padding: 2rem var(--padding);
         display: flex;
         align-items: center;
         justify-content: space-around;
-        height: 60vh;
-        width: 730px;
+        height: 80vh;
+        width: 815px;
         border-radius: 10px 100px / 120px;
         align-content: center;
     }
@@ -813,12 +945,12 @@ p{
         width:100%;
         padding: 0px 25px;
     }
-    .about .about-text {
-      
-        padding-right: 100px;
-        font-size: 28px;
-    
-    
+    .about .about-text p{
+   
+            width: 420px;
+            font-size: 28x;
+            height: 100px;
+            line-height: 34px;
     }
 
     .button{
@@ -831,27 +963,39 @@ p{
         font-weight: bold;
         border-radius: 10px 100px / 120px;
         border: #5CB8E4 solid 2px;
-        padding: 5px;
-        margin: 7% 5%; 
+        padding: 9px;
+        margin: 12% 5%; 
      position: absolute;
+     font-size: 15px;
         
     }
  html{
-    font-size: 9px;
+    font-size: 14px;
  }
+ .Education{
+    background-color: var(--background);
+     padding: 0rem 2rem;
+     display: flex;
+     align-items: center;
+     justify-content: space-around;
+     height: 60vh;
+     align-content: center;
+     
+   }
+ .Education .Education-img img{
+     padding: 25px 25px;
+     padding-left: 220px;
+     position: absolute;
+     
  
-.box .card h5 {
-    color: #000000;
-    font-family:,'Times New Roman', Times, serif; 
-    font-weight: 700;
-}
-#styde{
-    width: 22px;
-    height: 220px;
-    position: absolute;
-    margin-top: 180px;
-}
-
+ }
+ .Education-text{
+     position: absolute;
+     padding-bottom: 150px;
+     padding-left: 50px;
+    
+    
+ }
 .soft{
     width: 80%;
     font-size: 25px;
@@ -874,15 +1018,14 @@ top: 2858px;
     width: 920px;
     border: groove 1em rgb(110, 0, 125);
   border-radius: 2em;
-margin:5% 30%;
+margin-left: 220px !important;
     display: flex; 
     justify-content: space-around;
     padding: 17px;
 }
-.skills{   background-image: linear-gradient(to left, rgb(53, 221, 255), #8758ff);
-  
-    width: 100%
-   
+.skills{   background-image: linear-gradient(to left, rgb(5, 92, 109), #45307b);
+    width:827px;
+    height: 1400px;
 }
 .skill .title h2{
     justify-content: space-around;
@@ -891,13 +1034,12 @@ margin:5% 30%;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 20px;
+        margin: 28px;
         flex-wrap: wrap;
-     
     }
     .card{
-        height: 74vh;
-        width: 800px;
+        height: 85vh;
+        width: 700px;
         padding: 20px 35px;
         background-image: linear-gradient(180deg, #00bef3 50% ,#ac38ae 100%);
         border-radius: 20px;
@@ -916,58 +1058,66 @@ margin:5% 30%;
     .lng{
         background-color: rgb(165, 205, 241);
          height:100px;
-         width: 300px;
+         width: 550px;
          border: groove 1em rgb(110, 0, 125);
        border-radius: 2em;
-     margin:5% 50%;
          display: flex; 
          justify-content: space-around;
          padding: 17px;
+         margin-left: -150px;;
      }
-     .lng-h2{
+     .lng-h2 {
          display: flex;
-         justify-content: center;
-         margin: 5% 50%;
+         font-size: 26px;
          padding-bottom: 10px;
+         margin-left: 220px !important;
      }
      .lng-1{
          height: 25vh;
-         margin-right: 300px;
+         margin-left:-70px;
      }
      .ahmad{
         width: 80%;
-        height: 50vh;
+        height: 990px;
+        margin: 20px;
     }
     .responsiveref {
-        margin:40px 0 12% 8% ;
+        
         padding: 0 20px;
-        float:left;
-        width: 100%;
+        justify-content: right; 
         display: flex;
-        font-family:'Alata', sans-serif;
+        flex-wrap: wrap;
+        font-family:'Alata';
       }
       div.reference {
-    
-        margin-right:32px;
-        margin-left: 26px;
-
-        background-color: #ffffff17;
+      margin: 40px;
+        width: 150px;
+        background-color: #000000;
+        margin: 44px;
       }
     
       div.reference:hover {
-        border: 1px solid rgb(255, 250, 250);
+        border: 1px solid rgb(234, 229, 229);
+        width: 240px;
+        height: 10px;
       }
       div.reference img {
-        width: 90px;
-        height: 25vh;
+        
+        width: 225px;
+        height: 240px;
+    margin-left: 15px;
+    
       }
       div .reference .desc{
         font-family:'Alata',;
+        width: 220px;
+        height:205px ;
         font-size: 18px;
-        margin: 8px;
+       
       }
       div .reference .desc p{
-        font-size: 10px;}
+      
+        font-size: 15px }
 
 .cont{
     background-color:var(--background);
@@ -976,5 +1126,56 @@ margin:5% 30%;
     display: flex;
     align-items: center;
     color: var(--color);
-margin: 50px;}
+margin-top: 140px;
 }
+
+  @media only screen and (max-width: 700px) {
+    .responsive {
+      width: 49.99999%;
+      margin: 6px 0;
+    }
+  }
+  
+  @media only screen and (max-width: 500px) {
+    .responsive {
+      width: 100%;
+    }
+  }
+  
+  .clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  footer{
+  
+    bottom: 0;
+    left: 0;
+  height: 250px !important;
+background-color: rgba(119, 197, 205, 0.573);
+    font-family: system-ui ;
+font-size: 17px;
+    color: #8758ff;
+    width: 800px;
+padding-bottom: 50px !important;
+}
+
+.footr-bottom p{
+    font-size: 15px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+    display: flex;
+    justify-content: center;
+}
+.footr-bottom span{
+    text-transform: uppercase;
+    opacity: .4;
+    font-weight: 200;
+}
+
+#ref-name{
+    margin: 0 !important;
+ font-size: 35;
+ display: none;
+
+}}
